feat: add grafana dashboards
