# atoma-proxy-service/src/components/openapi.rs
@@ -21,9 +21,9 @@ use crate::{
             GET_CURRENT_STACKS_PATH,
         },
         stats::{
-            GetComputeUnitsProcessed, GetLatency, GetNodeDistribution, GetStatsStacks,
-            COMPUTE_UNITS_PROCESSED_PATH, GET_NODES_DISTRIBUTION_PATH, GET_STATS_STACKS_PATH,
-            LATENCY_PATH,
+            GetComputeUnitsProcessed, GetGraphs, GetLatency, GetNodeDistribution, GetStatsStacks,
+            COMPUTE_UNITS_PROCESSED_PATH, GET_GRAPHS_PATH, GET_NODES_DISTRIBUTION_PATH,
+            GET_STATS_STACKS_PATH, LATENCY_PATH,
         },
         subscriptions::{GetAllSubscriptionsOpenApi, SUBSCRIPTIONS_PATH},
         tasks::{GetAllTasksOpenApi, TASKS_PATH},
@@ -56,6 +56,7 @@ pub fn openapi_router() -> Router {
             (path = GET_STATS_STACKS_PATH, api = GetStatsStacks, tags = ["Stats"]),
             (path = SUBSCRIPTIONS_PATH, api = GetAllSubscriptionsOpenApi, tags = ["Subscriptions"]),
             (path = GET_NODES_DISTRIBUTION_PATH, api = GetNodeDistribution, tags = ["Stats"]),
+            (path = GET_GRAPHS_PATH, api = GetGraphs, tags = ["Stats"]),
         ),
         tags(
             (name = "Health", description = "Health check endpoints"),
